name:                dsmc-tools
version:             0.1.0.0
synopsis:            DSMC toolkit for rarefied gas dynamics
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Physics

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1

-- executable dsmc-caster
--   ghc-options: -threaded -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3 -Wall -rtsopts
--   main-is: src/Caster.hs

--   -- other-modules:

--   build-depends:
--     base         == 4.*,
--     cmdargs      == 0.9.*,
--     dsmc         == 0.1.*,
--     repa         == 3.1.*,
--     repa-devil   == 0.3.*,
--     gloss        == 1.7.*,
--     gloss-raster == 1.7.*,
--     strict       == 0.3.*

executable dsmc-runner
  ghc-options: -threaded -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3 -Wall -rtsopts
  main-is: src/Runner.hs

  build-depends:
    base         == 4.*,
    ConfigFile   == 1.1.*,
    dsmc         == 0.1.*,
    mwc-random   == 0.12.*,
    mtl          == 2.1.1
