name:                dsmc-tools
description:         CLI tools for dsmc library. README and examples are
                     included in package distribution.
version:             0.2.0.0
synopsis:            DSMC toolkit for rarefied gas dynamics
homepage:            http://github.com/dzhus/dsmc-tools/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Physics

data-files:          README, example.prb

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.6.1

source-repository head
  type: git
  location: http://github.com/dzhus/dsmc-tools/

executable dsmc-runner
  ghc-options: -Wall -O2 -funbox-strict-fields -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
  main-is: src/Runner.hs

  build-depends:
    base           == 4.*,
    bytestring     == 0.10.*,
    cmdargs        == 0.10.*,
    ConfigFile     == 1.1.*,
    dsmc           == 0.1.*,
    hslogger       == 1.2.*,
    transformers   == 0.3.*,
    mtl            == 2.1.*,
    repa           == 3.2.*,
    vector         == 0.10.*
